<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Crime 简短描述</string>
    <string name="crime_title_label">标题</string>
    <string name="crime_details_label">明细</string>
    <string name="crime_solved_label">是否解决</string>
    <string name="new_crime">新增crime记录</string>
    <string name="some_cool_title">Cool标题</string>
    <string name="text_empty_view">没有嫌疑人</string>
    <string name="crime_suspect_text">选择嫌疑人</string>
    <string name="crime_report_text">发送短信</string>
    <string name="crime_report">%1s!Crime 被发现在 2%s.%3s,and %4s</string>
    <string name="crime_report_solved">已解决</string>
    <string name="crime_report_unsolved">未解决</string>
    <string name="crime_report_no_suspect">没有嫌疑人</string>
    <string name="crime_report_suspect">嫌疑人是 %s.</string>
    <string name="crime_report_subject">crime 处理情况报告</string>
    <string name="send_report">发送报告</string>
    <string name="call_suspect">拨打嫌疑人电话</string>
    <string name="crime_photo_btn_des">陋习现场拍照按钮</string>
    <string name="crime_photo_no_image">陋习现场照片(未拍照)</string>
    <string name="crime_photo_image_description">陋习现场照片(已拍照)</string>
    <string name="crime_is_solved">是否解决</string>
    <string name="crime_date">陋习时间</string>

</resources>