<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_crime_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/crime_photo_no_image"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:text="@string/crime_title_label" />

        <EditText
            android:id="@+id/edt_crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:hint="@string/crime_title_hint" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/ibtn_crime_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label" />

    <TextView
        android:id="@+id/tv_crime_date_lable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/btn_crime_date"
        tools:text="Date"
        android:contentDescription="@string/crime_date" />

    <Button
        android:id="@+id/btn_crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14" />

    <CheckBox
        android:id="@+id/cbox_crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label" />

    <Button
        android:id="@+id/btn_crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text" />

    <Button
        android:id="@+id/btn_crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text" />

    <Button
        android:id="@+id/btn_call_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_suspect" />
</LinearLayout>